@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-05T00:53:05Z",
-  "count_outdated" : 390,
-  "uniques_outdated" : 19,
+  "timestamp" : "2022-06-07T08:12:14Z",
+  "count_outdated" : 391,
+  "uniques_outdated" : 20,
   "count" : 407,
   "uniques" : 24,
   "views" : [
-    {
-      "timestamp": "2022-05-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 4,
